cluster-resources/prometheus-operator/configuration/prometheus-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    cert-manager.io/cluster-issuer: "cloudflare-issuer"
    acme.cert-manager.io/dns01-provider: cloudflare
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: prometheus-operated
                port:
                  number: 9090
      host: prometheus.127-0-0-1.nip.io
  #tls:
  #  - hosts:
  #    - prometheus.127-0-0-1.nip.io
  #    secretName: ingress-tls
